Analizador 39568_19/.antlr/Analizador39568_9Parser.java
// Generated from c:/Users/Mati/Desktop/Analizador 39568_19/Analizador39568_9.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Analizador39568_9Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SWITCH=1, CASE=2, DEFAULT=3, OUTPUT=4, PARENTESIS_IZQ=5, PARENTESIS_DER=6, 
		LLAVE_IZQ=7, LLAVE_DER=8, DOS_PUNTOS=9, PUNTO_Y_COMA=10, ASIGNACION=11, 
		TEXTO=12, IDENTIFICADOR=13, NUMERO=14, WS=15;
	public static final int
		RULE_programa = 0, RULE_instruccionSimple = 1, RULE_sentenciaSwitch = 2, 
		RULE_seccionCase = 3, RULE_seccionDefault = 4, RULE_sentenciaAsignacion = 5, 
		RULE_sentenciaOutput = 6, RULE_constante = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "instruccionSimple", "sentenciaSwitch", "seccionCase", "seccionDefault", 
			"sentenciaAsignacion", "sentenciaOutput", "constante"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'switch'", "'case'", "'default'", "'output'", "'('", "')'", "'{'", 
			"'}'", "':'", "';'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SWITCH", "CASE", "DEFAULT", "OUTPUT", "PARENTESIS_IZQ", "PARENTESIS_DER", 
			"LLAVE_IZQ", "LLAVE_DER", "DOS_PUNTOS", "PUNTO_Y_COMA", "ASIGNACION", 
			"TEXTO", "IDENTIFICADOR", "NUMERO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Analizador39568_9.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Analizador39568_9Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Analizador39568_9Parser.EOF, 0); }
		public List<InstruccionSimpleContext> instruccionSimple() {
			return getRuleContexts(InstruccionSimpleContext.class);
		}
		public InstruccionSimpleContext instruccionSimple(int i) {
			return getRuleContext(InstruccionSimpleContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8210L) != 0)) {
				{
				{
				setState(16);
				instruccionSimple();
				}
				}
				setState(21);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(22);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionSimpleContext extends ParserRuleContext {
		public SentenciaSwitchContext sentenciaSwitch() {
			return getRuleContext(SentenciaSwitchContext.class,0);
		}
		public SentenciaAsignacionContext sentenciaAsignacion() {
			return getRuleContext(SentenciaAsignacionContext.class,0);
		}
		public SentenciaOutputContext sentenciaOutput() {
			return getRuleContext(SentenciaOutputContext.class,0);
		}
		public InstruccionSimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccionSimple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterInstruccionSimple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitInstruccionSimple(this);
		}
	}

	public final InstruccionSimpleContext instruccionSimple() throws RecognitionException {
		InstruccionSimpleContext _localctx = new InstruccionSimpleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruccionSimple);
		try {
			setState(27);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SWITCH:
				enterOuterAlt(_localctx, 1);
				{
				setState(24);
				sentenciaSwitch();
				}
				break;
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				sentenciaAsignacion();
				}
				break;
			case OUTPUT:
				enterOuterAlt(_localctx, 3);
				{
				setState(26);
				sentenciaOutput();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaSwitchContext extends ParserRuleContext {
		public TerminalNode SWITCH() { return getToken(Analizador39568_9Parser.SWITCH, 0); }
		public TerminalNode PARENTESIS_IZQ() { return getToken(Analizador39568_9Parser.PARENTESIS_IZQ, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(Analizador39568_9Parser.IDENTIFICADOR, 0); }
		public TerminalNode PARENTESIS_DER() { return getToken(Analizador39568_9Parser.PARENTESIS_DER, 0); }
		public TerminalNode LLAVE_IZQ() { return getToken(Analizador39568_9Parser.LLAVE_IZQ, 0); }
		public TerminalNode LLAVE_DER() { return getToken(Analizador39568_9Parser.LLAVE_DER, 0); }
		public List<SeccionCaseContext> seccionCase() {
			return getRuleContexts(SeccionCaseContext.class);
		}
		public SeccionCaseContext seccionCase(int i) {
			return getRuleContext(SeccionCaseContext.class,i);
		}
		public SeccionDefaultContext seccionDefault() {
			return getRuleContext(SeccionDefaultContext.class,0);
		}
		public SentenciaSwitchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenciaSwitch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterSentenciaSwitch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitSentenciaSwitch(this);
		}
	}

	public final SentenciaSwitchContext sentenciaSwitch() throws RecognitionException {
		SentenciaSwitchContext _localctx = new SentenciaSwitchContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentenciaSwitch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(SWITCH);
			setState(30);
			match(PARENTESIS_IZQ);
			setState(31);
			match(IDENTIFICADOR);
			setState(32);
			match(PARENTESIS_DER);
			setState(33);
			match(LLAVE_IZQ);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CASE) {
				{
				{
				setState(34);
				seccionCase();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEFAULT) {
				{
				setState(40);
				seccionDefault();
				}
			}

			setState(43);
			match(LLAVE_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionCaseContext extends ParserRuleContext {
		public TerminalNode CASE() { return getToken(Analizador39568_9Parser.CASE, 0); }
		public ConstanteContext constante() {
			return getRuleContext(ConstanteContext.class,0);
		}
		public TerminalNode DOS_PUNTOS() { return getToken(Analizador39568_9Parser.DOS_PUNTOS, 0); }
		public List<InstruccionSimpleContext> instruccionSimple() {
			return getRuleContexts(InstruccionSimpleContext.class);
		}
		public InstruccionSimpleContext instruccionSimple(int i) {
			return getRuleContext(InstruccionSimpleContext.class,i);
		}
		public SeccionCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterSeccionCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitSeccionCase(this);
		}
	}

	public final SeccionCaseContext seccionCase() throws RecognitionException {
		SeccionCaseContext _localctx = new SeccionCaseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_seccionCase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(CASE);
			setState(46);
			constante();
			setState(47);
			match(DOS_PUNTOS);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8210L) != 0)) {
				{
				{
				setState(48);
				instruccionSimple();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionDefaultContext extends ParserRuleContext {
		public TerminalNode DEFAULT() { return getToken(Analizador39568_9Parser.DEFAULT, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(Analizador39568_9Parser.DOS_PUNTOS, 0); }
		public List<InstruccionSimpleContext> instruccionSimple() {
			return getRuleContexts(InstruccionSimpleContext.class);
		}
		public InstruccionSimpleContext instruccionSimple(int i) {
			return getRuleContext(InstruccionSimpleContext.class,i);
		}
		public SeccionDefaultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionDefault; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterSeccionDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitSeccionDefault(this);
		}
	}

	public final SeccionDefaultContext seccionDefault() throws RecognitionException {
		SeccionDefaultContext _localctx = new SeccionDefaultContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_seccionDefault);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(DEFAULT);
			setState(55);
			match(DOS_PUNTOS);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8210L) != 0)) {
				{
				{
				setState(56);
				instruccionSimple();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaAsignacionContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(Analizador39568_9Parser.IDENTIFICADOR, 0); }
		public TerminalNode ASIGNACION() { return getToken(Analizador39568_9Parser.ASIGNACION, 0); }
		public ConstanteContext constante() {
			return getRuleContext(ConstanteContext.class,0);
		}
		public TerminalNode PUNTO_Y_COMA() { return getToken(Analizador39568_9Parser.PUNTO_Y_COMA, 0); }
		public SentenciaAsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenciaAsignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterSentenciaAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitSentenciaAsignacion(this);
		}
	}

	public final SentenciaAsignacionContext sentenciaAsignacion() throws RecognitionException {
		SentenciaAsignacionContext _localctx = new SentenciaAsignacionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentenciaAsignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(IDENTIFICADOR);
			setState(63);
			match(ASIGNACION);
			setState(64);
			constante();
			setState(65);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaOutputContext extends ParserRuleContext {
		public TerminalNode OUTPUT() { return getToken(Analizador39568_9Parser.OUTPUT, 0); }
		public TerminalNode PARENTESIS_IZQ() { return getToken(Analizador39568_9Parser.PARENTESIS_IZQ, 0); }
		public TerminalNode TEXTO() { return getToken(Analizador39568_9Parser.TEXTO, 0); }
		public TerminalNode PARENTESIS_DER() { return getToken(Analizador39568_9Parser.PARENTESIS_DER, 0); }
		public TerminalNode PUNTO_Y_COMA() { return getToken(Analizador39568_9Parser.PUNTO_Y_COMA, 0); }
		public SentenciaOutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenciaOutput; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterSentenciaOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitSentenciaOutput(this);
		}
	}

	public final SentenciaOutputContext sentenciaOutput() throws RecognitionException {
		SentenciaOutputContext _localctx = new SentenciaOutputContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentenciaOutput);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(OUTPUT);
			setState(68);
			match(PARENTESIS_IZQ);
			setState(69);
			match(TEXTO);
			setState(70);
			match(PARENTESIS_DER);
			setState(71);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstanteContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(Analizador39568_9Parser.NUMERO, 0); }
		public TerminalNode TEXTO() { return getToken(Analizador39568_9Parser.TEXTO, 0); }
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).enterConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Analizador39568_9Listener ) ((Analizador39568_9Listener)listener).exitConstante(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constante);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_la = _input.LA(1);
			if ( !(_la==TEXTO || _la==NUMERO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}